[gd_scene load_steps=68 format=3]

[ext_resource type="PackedScene" uid="uid://cgaeu2ag4857g" path="res://Scene/Base/BaseMonster.tscn" id="1"]
[ext_resource type="Script" path="res://Script/Monster/Monster_139.gd" id="2"]
[ext_resource type="Texture2D" uid="uid://4sa5tt2jry1h" path="res://Art/Monster/OtherMonster_1/death.png" id="3"]
[ext_resource type="Texture2D" uid="uid://d1bqt2q17i3lf" path="res://Art/Monster/OtherMonster_1/Hit.png" id="4"]
[ext_resource type="Texture2D" uid="uid://3ep7x0g7i2ke" path="res://Art/Monster/OtherMonster_1/Hurt.png" id="5"]
[ext_resource type="Texture2D" uid="uid://cajga4htmr0us" path="res://Art/Monster/OtherMonster_1/wait.png" id="6"]
[ext_resource type="Texture2D" uid="uid://cwnnal8k0uux3" path="res://Art/Monster/OtherMonster_1/walk.png" id="7"]
[ext_resource type="FontFile" uid="uid://2rjpff4w8bmb" path="res://Font/华康海报体W12 &amp; 华康海报体W12(P).ttc" id="8"]
[ext_resource type="FontFile" uid="uid://ond0o3n8a00i" path="res://Font/华康宋体W3.ttc" id="9"]

[sub_resource type="AtlasTexture" id="1"]
atlas = ExtResource( "3" )
region = Rect2(0, 0, 217, 164)
script = null

[sub_resource type="AtlasTexture" id="2"]
atlas = ExtResource( "3" )
region = Rect2(217, 0, 217, 164)
script = null

[sub_resource type="AtlasTexture" id="3"]
atlas = ExtResource( "3" )
region = Rect2(434, 0, 217, 164)
script = null

[sub_resource type="AtlasTexture" id="4"]
atlas = ExtResource( "3" )
region = Rect2(651, 0, 217, 164)
script = null

[sub_resource type="AtlasTexture" id="5"]
atlas = ExtResource( "3" )
region = Rect2(868, 0, 217, 164)
script = null

[sub_resource type="AtlasTexture" id="6"]
atlas = ExtResource( "3" )
region = Rect2(1085, 0, 217, 164)
script = null

[sub_resource type="AtlasTexture" id="7"]
atlas = ExtResource( "3" )
region = Rect2(1302, 0, 217, 164)
script = null

[sub_resource type="AtlasTexture" id="8"]
atlas = ExtResource( "3" )
region = Rect2(1519, 0, 217, 164)
script = null

[sub_resource type="AtlasTexture" id="9"]
atlas = ExtResource( "4" )
region = Rect2(0, 0, 369, 251)
script = null

[sub_resource type="AtlasTexture" id="10"]
atlas = ExtResource( "4" )
region = Rect2(369, 0, 369, 251)
script = null

[sub_resource type="AtlasTexture" id="11"]
atlas = ExtResource( "4" )
region = Rect2(738, 0, 369, 251)
script = null

[sub_resource type="AtlasTexture" id="12"]
atlas = ExtResource( "4" )
region = Rect2(1107, 0, 369, 251)
script = null

[sub_resource type="AtlasTexture" id="13"]
atlas = ExtResource( "4" )
region = Rect2(1476, 0, 369, 251)
script = null

[sub_resource type="AtlasTexture" id="14"]
atlas = ExtResource( "4" )
region = Rect2(0, 251, 369, 251)
script = null

[sub_resource type="AtlasTexture" id="15"]
atlas = ExtResource( "4" )
region = Rect2(369, 251, 369, 251)
script = null

[sub_resource type="AtlasTexture" id="16"]
atlas = ExtResource( "4" )
region = Rect2(738, 251, 369, 251)
script = null

[sub_resource type="AtlasTexture" id="17"]
atlas = ExtResource( "4" )
region = Rect2(1107, 251, 369, 251)
script = null

[sub_resource type="AtlasTexture" id="18"]
atlas = ExtResource( "4" )
region = Rect2(1476, 251, 369, 251)
script = null

[sub_resource type="AtlasTexture" id="19"]
atlas = ExtResource( "4" )
region = Rect2(0, 502, 369, 251)
script = null

[sub_resource type="AtlasTexture" id="20"]
atlas = ExtResource( "4" )
region = Rect2(369, 502, 369, 251)
script = null

[sub_resource type="AtlasTexture" id="21"]
atlas = ExtResource( "4" )
region = Rect2(738, 502, 369, 251)
script = null

[sub_resource type="AtlasTexture" id="22"]
atlas = ExtResource( "4" )
region = Rect2(1107, 502, 369, 251)
script = null

[sub_resource type="AtlasTexture" id="23"]
atlas = ExtResource( "4" )
region = Rect2(1476, 502, 369, 251)
script = null

[sub_resource type="AtlasTexture" id="24"]
atlas = ExtResource( "4" )
region = Rect2(0, 753, 369, 251)
script = null

[sub_resource type="AtlasTexture" id="25"]
atlas = ExtResource( "4" )
region = Rect2(369, 753, 369, 251)
script = null

[sub_resource type="AtlasTexture" id="26"]
atlas = ExtResource( "4" )
region = Rect2(738, 753, 369, 251)
script = null

[sub_resource type="AtlasTexture" id="27"]
atlas = ExtResource( "4" )
region = Rect2(1107, 753, 369, 251)
script = null

[sub_resource type="AtlasTexture" id="28"]
atlas = ExtResource( "4" )
region = Rect2(1476, 753, 369, 251)
script = null

[sub_resource type="AtlasTexture" id="29"]
atlas = ExtResource( "4" )
region = Rect2(0, 1004, 369, 251)
script = null

[sub_resource type="AtlasTexture" id="30"]
atlas = ExtResource( "4" )
region = Rect2(369, 1004, 369, 251)
script = null

[sub_resource type="AtlasTexture" id="31"]
atlas = ExtResource( "4" )
region = Rect2(738, 1004, 369, 251)
script = null

[sub_resource type="AtlasTexture" id="32"]
atlas = ExtResource( "5" )
region = Rect2(0, 0, 150, 114)
script = null

[sub_resource type="AtlasTexture" id="33"]
atlas = ExtResource( "6" )
region = Rect2(0, 0, 158, 136)
script = null

[sub_resource type="AtlasTexture" id="34"]
atlas = ExtResource( "6" )
region = Rect2(158, 0, 158, 136)
script = null

[sub_resource type="AtlasTexture" id="35"]
atlas = ExtResource( "6" )
region = Rect2(316, 0, 158, 136)
script = null

[sub_resource type="AtlasTexture" id="36"]
atlas = ExtResource( "6" )
region = Rect2(474, 0, 158, 136)
script = null

[sub_resource type="AtlasTexture" id="37"]
atlas = ExtResource( "6" )
region = Rect2(632, 0, 158, 136)
script = null

[sub_resource type="AtlasTexture" id="38"]
atlas = ExtResource( "6" )
region = Rect2(790, 0, 158, 136)
script = null

[sub_resource type="AtlasTexture" id="39"]
atlas = ExtResource( "7" )
region = Rect2(0, 0, 186, 137)
script = null

[sub_resource type="AtlasTexture" id="40"]
atlas = ExtResource( "7" )
region = Rect2(186, 0, 186, 137)
script = null

[sub_resource type="AtlasTexture" id="41"]
atlas = ExtResource( "7" )
region = Rect2(372, 0, 186, 137)
script = null

[sub_resource type="AtlasTexture" id="42"]
atlas = ExtResource( "7" )
region = Rect2(558, 0, 186, 137)
script = null

[sub_resource type="SpriteFrames" id="43"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource( "1" )
}, {
"duration": 1.0,
"texture": SubResource( "2" )
}, {
"duration": 1.0,
"texture": SubResource( "3" )
}, {
"duration": 1.0,
"texture": SubResource( "4" )
}, {
"duration": 1.0,
"texture": SubResource( "5" )
}, {
"duration": 1.0,
"texture": SubResource( "6" )
}, {
"duration": 1.0,
"texture": SubResource( "7" )
}, {
"duration": 1.0,
"texture": SubResource( "8" )
}, {
"duration": 1.0,
"texture": SubResource( "8" )
}, {
"duration": 1.0,
"texture": SubResource( "8" )
}, {
"duration": 1.0,
"texture": SubResource( "8" )
}, {
"duration": 1.0,
"texture": SubResource( "8" )
}, {
"duration": 1.0,
"texture": SubResource( "8" )
}, {
"duration": 1.0,
"texture": SubResource( "8" )
}, {
"duration": 1.0,
"texture": SubResource( "8" )
}],
"loop": false,
"name": &"death",
"speed": 15.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource( "9" )
}, {
"duration": 1.0,
"texture": SubResource( "10" )
}, {
"duration": 1.0,
"texture": SubResource( "11" )
}, {
"duration": 1.0,
"texture": SubResource( "12" )
}, {
"duration": 1.0,
"texture": SubResource( "13" )
}, {
"duration": 1.0,
"texture": SubResource( "14" )
}, {
"duration": 1.0,
"texture": SubResource( "15" )
}, {
"duration": 1.0,
"texture": SubResource( "16" )
}, {
"duration": 1.0,
"texture": SubResource( "17" )
}, {
"duration": 1.0,
"texture": SubResource( "18" )
}, {
"duration": 1.0,
"texture": SubResource( "19" )
}, {
"duration": 1.0,
"texture": SubResource( "20" )
}, {
"duration": 1.0,
"texture": SubResource( "21" )
}, {
"duration": 1.0,
"texture": SubResource( "22" )
}, {
"duration": 1.0,
"texture": SubResource( "23" )
}, {
"duration": 1.0,
"texture": SubResource( "24" )
}, {
"duration": 1.0,
"texture": SubResource( "25" )
}, {
"duration": 1.0,
"texture": SubResource( "26" )
}, {
"duration": 1.0,
"texture": SubResource( "27" )
}, {
"duration": 1.0,
"texture": SubResource( "28" )
}, {
"duration": 1.0,
"texture": SubResource( "29" )
}, {
"duration": 1.0,
"texture": SubResource( "30" )
}, {
"duration": 1.0,
"texture": SubResource( "31" )
}],
"loop": false,
"name": &"hit1",
"speed": 24.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource( "32" )
}, {
"duration": 1.0,
"texture": SubResource( "32" )
}, {
"duration": 1.0,
"texture": SubResource( "32" )
}, {
"duration": 1.0,
"texture": SubResource( "32" )
}, {
"duration": 1.0,
"texture": SubResource( "32" )
}, {
"duration": 1.0,
"texture": SubResource( "32" )
}, {
"duration": 1.0,
"texture": SubResource( "32" )
}],
"loop": false,
"name": &"hurt",
"speed": 25.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource( "33" )
}, {
"duration": 1.0,
"texture": SubResource( "34" )
}, {
"duration": 1.0,
"texture": SubResource( "35" )
}, {
"duration": 1.0,
"texture": SubResource( "36" )
}, {
"duration": 1.0,
"texture": SubResource( "37" )
}, {
"duration": 1.0,
"texture": SubResource( "38" )
}],
"loop": false,
"name": &"wait",
"speed": 9.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource( "39" )
}, {
"duration": 1.0,
"texture": SubResource( "40" )
}, {
"duration": 1.0,
"texture": SubResource( "41" )
}, {
"duration": 1.0,
"texture": SubResource( "42" )
}],
"loop": false,
"name": &"walk",
"speed": 5.0
}]
script = null

[sub_resource type="Animation" id="44"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("BaseDamageBox/HitBox/HitBox:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(-92.1236, 8.34542)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("BaseDamageBox/HitBox/HitBox:rotation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [-0.179769]
}
script = null

[sub_resource type="Animation" id="45"]
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("MonsterDir/mr_ani:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.0666667, 0.133333, 0.2, 0.266667, 0.333333, 0.4, 0.466667, 0.533333, 0.6, 0.666667, 0.733333, 0.8, 0.866667, 0.933333),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11, 12, 13, 14]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("MonsterDir/mr_ani:animation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": ["death"]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("MonsterDir/mr_ani:offset")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(-19, 10)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("BaseDamageBox/HitBox/HitBox:disabled")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("BaseDamageBox/HurtBox/HurtBox:disabled")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/5/type = "value"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath(".:modulate")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = {
"times": PackedFloat32Array(0.5, 0.9),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 1, 1, 0)]
}
tracks/6/type = "method"
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/path = NodePath(".")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/keys = {
"times": PackedFloat32Array(0.9),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [],
"method": &"queue_free"
}]
}
script = null

[sub_resource type="RectangleShape2D" id="46"]
size = Vector2(194.106, 54.6474)
script = null

[sub_resource type="Animation" id="47"]
length = 0.958333
step = 0.02
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("MonsterDir/mr_ani:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.0416667, 0.0833333, 0.125, 0.166667, 0.208333, 0.25, 0.291667, 0.333333, 0.375, 0.416667, 0.458333, 0.5, 0.541667, 0.583333, 0.625, 0.666667, 0.708333, 0.75, 0.791667, 0.833333, 0.875, 0.916667),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11, 12, 13, 14, 15, 16, 17, 18, 19, 20, 21, 22]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("MonsterDir/mr_ani:animation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": ["hit1"]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("MonsterDir/mr_ani:offset")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(-74.5, 39)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("BaseDamageBox/HurtBox/HurtBox:disabled")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("BaseDamageBox/HitBox/HitBox:shape")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0.22),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [SubResource( "46" )]
}
tracks/5/type = "value"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath("BaseDamageBox/HitBox/HitBox:disabled")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = {
"times": PackedFloat32Array(0.22, 0.45, 0.5, 0.7, 0.75, 0.9),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1),
"update": 1,
"values": [false, true, false, true, false, true]
}
tracks/6/type = "value"
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/path = NodePath("BaseDamageBox/HitBox/HitBox:position")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/keys = {
"times": PackedFloat32Array(0.22, 0.5, 0.75),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [Vector2(-95.1236, 18.3454), Vector2(-92.1236, 7.34542), Vector2(-81, 35)]
}
tracks/7/type = "value"
tracks/7/imported = false
tracks/7/enabled = true
tracks/7/path = NodePath("BaseDamageBox/HitBox/HitBox:rotation")
tracks/7/interp = 1
tracks/7/loop_wrap = true
tracks/7/keys = {
"times": PackedFloat32Array(0.22, 0.5, 0.75),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [-0.268781, -0.179769, -0.337017]
}
script = null

[sub_resource type="Animation" id="48"]
length = 0.28
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("MonsterDir/mr_ani:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.04, 0.08, 0.12, 0.16, 0.2, 0.24),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3, 4, 5, 6]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("MonsterDir/mr_ani:animation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": ["hurt"]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("MonsterDir/mr_ani:offset")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, 3)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("BaseDamageBox/HitBox/HitBox:disabled")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("BaseDamageBox/HurtBox/HurtBox:disabled")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
script = null

[sub_resource type="Animation" id="49"]
length = 0.666667
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("MonsterDir/mr_ani:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.111111, 0.222222, 0.333333, 0.444444, 0.555556),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3, 4, 5]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("MonsterDir/mr_ani:animation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": ["wait"]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("MonsterDir/mr_ani:offset")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, 0)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("BaseDamageBox/HitBox/HitBox:disabled")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("BaseDamageBox/HurtBox/HurtBox:disabled")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
script = null

[sub_resource type="Animation" id="50"]
length = 0.8
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("MonsterDir/mr_ani:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2, 0.4, 0.6),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("MonsterDir/mr_ani:animation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": ["walk"]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("MonsterDir/mr_ani:offset")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, 3)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("BaseDamageBox/HitBox/HitBox:disabled")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("BaseDamageBox/HurtBox/HurtBox:disabled")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
script = null

[sub_resource type="AnimationLibrary" id="51"]
_data = {
"RESET": SubResource( "44" ),
"death": SubResource( "45" ),
"hit1": SubResource( "47" ),
"hurt": SubResource( "48" ),
"wait": SubResource( "49" ),
"walk": SubResource( "50" )
}
script = null

[sub_resource type="RectangleShape2D" id="52"]
size = Vector2(63, 108)
script = null

[sub_resource type="CapsuleShape2D" id="53"]
radius = 29.0
height = 108.0
script = null

[sub_resource type="StyleBoxEmpty" id="54"]
script = null

[sub_resource type="StyleBoxEmpty" id="55"]
script = null

[sub_resource type="StyleBoxEmpty" id="56"]
script = null

[sub_resource type="StyleBoxEmpty" id="57"]
script = null

[sub_resource type="StyleBoxEmpty" id="58"]
script = null

[node name="Monster_139" instance=ExtResource( "1" )]
script = ExtResource( "2" )

[node name="mr_ani" parent="MonsterDir" index="0"]
position = Vector2(0, -10)
sprite_frames = SubResource( "43" )
animation = &"hit1"
offset = Vector2(-74.5, 39)
flip_h = true
metadata/_edit_lock_ = true

[node name="mr_player" parent="." index="2"]
libraries = {
"": SubResource( "51" )
}

[node name="HitBox" parent="BaseDamageBox" index="0"]
collision_mask = 128

[node name="HitBox" parent="BaseDamageBox/HitBox" index="0"]
position = Vector2(-92.1236, 8.34542)
rotation = -0.179769
shape = SubResource( "46" )
disabled = true

[node name="HurtBox" parent="BaseDamageBox" index="1"]
collision_layer = 3136

[node name="HurtBox" parent="BaseDamageBox/HurtBox" index="0"]
position = Vector2(-0.5, -7)
shape = SubResource( "52" )
metadata/_edit_lock_ = true

[node name="pz" parent="." index="4"]
position = Vector2(-1, -7)
shape = SubResource( "53" )
metadata/_edit_lock_ = true

[node name="buttonlist" type="VBoxContainer" parent="." index="12"]
offset_left = 33.0
offset_top = -103.0
offset_right = 97.0
offset_bottom = -44.0
metadata/_edit_lock_ = true

[node name="bt" type="Button" parent="buttonlist" index="0"]
layout_mode = 2
focus_mode = 0
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/font_hover_color = Color(1, 0.454902, 0, 1)
theme_override_fonts/font = ExtResource( "8" )
theme_override_styles/normal = SubResource( "54" )
theme_override_styles/hover = SubResource( "55" )
theme_override_styles/pressed = SubResource( "56" )
theme_override_styles/disabled = SubResource( "57" )
theme_override_styles/focus = SubResource( "58" )
text = "添加霸体"

[node name="bt2" type="Button" parent="buttonlist" index="1"]
layout_mode = 2
focus_mode = 0
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/font_hover_color = Color(1, 0.454902, 0, 1)
theme_override_fonts/font = ExtResource( "8" )
theme_override_styles/normal = SubResource( "54" )
theme_override_styles/hover = SubResource( "55" )
theme_override_styles/pressed = SubResource( "56" )
theme_override_styles/disabled = SubResource( "57" )
theme_override_styles/focus = SubResource( "58" )
text = "无法行动"

[node name="bt3" type="Button" parent="buttonlist" index="2"]
layout_mode = 2
focus_mode = 0
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/font_hover_color = Color(1, 0.454902, 0, 1)
theme_override_fonts/font = ExtResource( "8" )
theme_override_styles/normal = SubResource( "54" )
theme_override_styles/hover = SubResource( "55" )
theme_override_styles/pressed = SubResource( "56" )
theme_override_styles/disabled = SubResource( "57" )
theme_override_styles/focus = SubResource( "58" )
text = "不可攻击"

[node name="HurtInfo" type="VBoxContainer" parent="." index="13"]
offset_left = 33.0
offset_top = -41.0
offset_right = 177.0
offset_bottom = 27.0
metadata/_edit_lock_ = true

[node name="TotalDam" type="Label" parent="HurtInfo" index="0"]
layout_mode = 2
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_colors/font_outline_color = Color(1, 1, 1, 1)
theme_override_constants/shadow_offset_x = 0
theme_override_constants/shadow_offset_y = 0
theme_override_constants/outline_size = 2
theme_override_constants/shadow_outline_size = 10
theme_override_fonts/font = ExtResource( "9" )
text = "累计受到伤害："

[node name="TotalDam2" type="Label" parent="HurtInfo" index="1"]
layout_mode = 2
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_colors/font_outline_color = Color(1, 1, 1, 1)
theme_override_constants/shadow_offset_x = 0
theme_override_constants/shadow_offset_y = 0
theme_override_constants/outline_size = 2
theme_override_constants/shadow_outline_size = 10
theme_override_fonts/font = ExtResource( "9" )
text = "平均每秒受到伤害："

[node name="TotalDam3" type="Label" parent="HurtInfo" index="2"]
layout_mode = 2
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_colors/font_outline_color = Color(1, 1, 1, 1)
theme_override_constants/shadow_offset_x = 0
theme_override_constants/shadow_offset_y = 0
theme_override_constants/outline_size = 2
theme_override_constants/shadow_outline_size = 10
theme_override_fonts/font = ExtResource( "9" )
text = "每一秒受到伤害："

[node name="RemoveAllHurt" type="Timer" parent="." index="14"]

[node name="EverySecond" type="Timer" parent="." index="15"]
autostart = true

[connection signal="mouse_entered" from="buttonlist" to="." method="_on_buttonlist_mouse_entered" flags=18]
[connection signal="mouse_exited" from="buttonlist" to="." method="_on_buttonlist_mouse_exited" flags=18]
[connection signal="pressed" from="buttonlist/bt" to="." method="_on_bt_pressed" flags=18]
[connection signal="pressed" from="buttonlist/bt2" to="." method="_on_bt_2_pressed" flags=18]
[connection signal="pressed" from="buttonlist/bt3" to="." method="_on_bt_3_pressed" flags=18]
[connection signal="timeout" from="RemoveAllHurt" to="." method="_on_remove_all_hurt_timeout" flags=18]
[connection signal="timeout" from="EverySecond" to="." method="_on_every_second_timeout" flags=18]
